Update to JavaSE-1.8
- Given the removal of support for < 1.8 by ecj for 4.33 and hence soon
by Tycho we should stop relying on that support for the legacy bundles.
- These older versions of Java are past EOL and no EPP package has run
on < Java 1.8 for a very long time.
- Eliminate also the use of new Boolean/Integer which are deprecated for
removal as of Java 9 and for which better alternatives always existed.